<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.update_profile.UpdateProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:paddingBottom="10dp"
                app:cardCornerRadius="5dp"
                app:elevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp">

                    <ImageView
                        android:id="@+id/background_image"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:scaleType="fitXY"
                        android:src="@mipmap/education"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/edit_background_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:backgroundTint="#00FFFFFF"
                        android:foreground="?android:selectableItemBackgroundBorderless"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_baseline_edit_24"
                        app:layout_constraintBottom_toBottomOf="@id/background_image"
                        app:layout_constraintEnd_toEndOf="@id/background_image" />

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/profile_image"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="70dp"
                        android:layout_marginEnd="10dp"
                        android:src="@mipmap/education"
                        app:civ_border_color="#DDDDDD"
                        app:civ_border_width="2dp"
                        app:civ_shadow="true"
                        app:civ_shadow_color="#80EDBC6A"
                        app:civ_shadow_radius="1dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/edit_profile_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:backgroundTint="#00FFFFFF"
                        android:foreground="?android:selectableItemBackgroundBorderless"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_baseline_edit_24"
                        app:layout_constraintBottom_toBottomOf="@id/profile_image"
                        app:layout_constraintStart_toEndOf="@id/profile_image" />

                    <TextView
                        android:id="@+id/greeting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/greeting"
                        android:textColor="@android:color/holo_blue_light"
                        app:layout_constraintBottom_toTopOf="@id/fullname" />

                    <EditText
                        android:id="@+id/fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/background_text_input"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:hint="@string/full_name"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/profile_image"
                        tools:text="Raynard Dodzi" />

                    <EditText
                        android:id="@+id/level"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/background_text_input"
                        android:drawableStart="@drawable/ic_baseline_show_chart_24"
                        android:hint="@string/level"
                        android:inputType="number"
                        android:padding="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/fullname"
                        tools:text="Professional Math Teacher" />

                    <EditText
                        android:id="@+id/education"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/background_text_input"
                        android:drawableStart="@drawable/ic_baseline_school_24"
                        android:drawablePadding="5dp"
                        android:hint="@string/education"
                        android:inputType="text"
                        android:padding="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/level"
                        tools:text="University of Ghana" />

                    <EditText
                        android:id="@+id/contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/background_text_input"
                        android:drawableStart="@drawable/ic_baseline_call_24"
                        android:drawablePadding="5dp"
                        android:hint="@string/contact"
                        android:inputType="number"
                        android:padding="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/education"
                        tools:text="0249625071" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/background_text_input"
                        android:drawableStart="@drawable/ic_baseline_email_24"
                        android:drawablePadding="5dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/contact"
                        tools:text="dodzi@gma.com" />

                    <EditText
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/background_text_input"
                        android:drawableStart="@drawable/ic_baseline_location_on_24"
                        android:drawablePadding="5dp"
                        android:hint="@string/location"
                        android:inputType="text"
                        android:padding="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/email"
                        tools:text="Location" />

                    <EditText
                        android:id="@+id/introduction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/background_text_input"
                        android:hint="@string/about"
                        android:inputType="textMultiLine"
                        android:maxLines="6"
                        android:minHeight="100dp"
                        android:padding="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toTopOf="@id/save"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/location"
                        app:layout_goneMarginBottom="10dp"
                        app:layout_goneMarginTop="20dp"
                        tools:text="I've taught mathematics for 5 fives." />

                    <Button
                        android:id="@+id/save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:backgroundTint="@color/orange_800"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <Button
                        android:id="@+id/logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:text="Log out"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>